@@ -1,0 +1,9 @@
+use Module::Build;
+
+my $build = Module::Build->new (
+    module_name => 'Calendar',
+    license => 'perl',
+    create_makefile_pl => 'passthrough',
+);
+
+$build->create_build_script;
